# streamato

./: .gitignore  CMakeLists.txt
CMake/modules/: FindLibMicroHTTPD.cmake
src/: streamato.c
